# fastapi_zero

./: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
fast_zero/: app.py  database.py  models.py  schemas.py  security.py  typing.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 63413cbf0445_create_todos_table.py  aae68e5981a7_create_users_table.py
